testing the leaderboard functions